📝 docs: Add documatation for deleteOpening
